--- a/src/app/customer/account/account.component.html
+++ b/src/app/customer/account/account.component.html
@@ -1,3 +1,78 @@
-<p>
-  account works!
-</p>
+<div class="panel panel-default" *ngFor="let account of customerDetailsResponse.customerAccounts; let index = index">
+    
+    <div class="panel-body">
+      <div class="row">
+	<div class="col-md-3 col-lg-3 col-sm-3">
+		<label>
+		  	<span style="font-size: 20px"></span> Account Name : 
+		</label>
+	</div>
+	<div class="col-md-9 col-lg-9 col-sm-9">
+		<span class="h5"> {{account.name}}</span>
+	</div>
+      </div>
+      <div class="row">
+	<div class="col-md-3 col-lg-3 col-sm-3">
+		<label>
+		  	<span style="font-size: 20px"></span> Account Type : 
+		</label>
+	</div>
+	<div class="col-md-9 col-lg-9 col-sm-9">
+		<span class="h5"> {{account.accountType}}</span>
+	</div>
+      </div>
+      <div class="row">
+	<div class="col-md-3 col-lg-3 col-sm-3">
+		<label>
+		  	<span style="font-size: 20px"></span> Account Status : 
+		</label>
+	</div>
+	<div class="col-md-9 col-lg-9 col-sm-9">
+		<span class="h5"> {{account.status}}</span>
+	</div>
+      </div>
+      <div class="row">
+	<div class="col-md-3 col-lg-3 col-sm-3">
+		<label>
+		  	<span style="font-size: 20px"></span> Account Credit Limit : 
+		</label>
+	</div>
+	<div class="col-md-9 col-lg-9 col-sm-9">
+		<span class="h5"> {{account.creditLimit}}</span>
+	</div>
+      </div>
+
+      <div class="panel panel-default" >
+        <div *ngFor="let paymentPlan of account.paymentPlan">
+		<div *ngIf="paymentPlan.status == 'Effective'" class="panel-body">
+				
+			<div>
+	 			<label>
+			  		<span style="font-size: 20px"></span> PaymentPlan Status : 
+				</label> <span class="h5">{{paymentPlan.status}}</span>
+			</div>
+			<div>
+				<label>
+			  		<span style="font-size: 20px"></span> PaymentPlan Priority : 
+				</label> <span class="h5">{{paymentPlan.priority}}</span>
+			</div>
+			<div>
+				<label>
+			  		<span style="font-size: 20px"></span> Payment Frequency : 
+				</label> <span class="h5">{{paymentPlan.paymentFrequency}}</span>
+			</div>
+			<div>
+				<label>
+			  		<span style="font-size: 20px"></span> Number Of Payments : 
+				</label> <span class="h5">{{paymentPlan.numberOfPayments}}</span>
+			</div>
+			<div>
+				<label>
+			  		<span style="font-size: 20px"></span> PaymentPlan Valid For : 
+				</label> <span class="h5">{{paymentPlan.validFor.startDateTime + "   -   " + paymentPlan.validFor.endDateTime}}</span>
+			</div>
+		</div>
+      	</div>
+      </div>
+    </div>	
+</div>
